Header: Fix visible focus styles

--- a/mu-plugins/blocks/global-header-footer/postcss/header/logos.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/logos.pcss
@@ -38,6 +38,11 @@
 			padding-bottom: 16px;
 			padding-top: 16px;
 		}
+
+		&:focus-visible {
+			outline: 1px dashed currentcolor;
+			outline-offset: -2px;
+		}
 	}
 
 	&.global-header__has-locale-title .global-header__wporg-logo-mark {
